<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ecnudb.ImportTimetableFromEcnudbActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_text_horizontal_margin"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="@dimen/edit_text_horizontal_margin"
        android:autofillHints="@string/prompt_username"
        android:hint="@string/prompt_username"
        android:inputType="number"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_text_horizontal_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/edit_text_horizontal_margin"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_text_horizontal_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/edit_text_horizontal_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/captchaVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/captcha"
            android:hint="@string/captcha"
            android:inputType="number"
            android:selectAllOnFocus="true" />

        <ImageView
            android:id="@+id/captchaImg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/captcha_image"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

    </LinearLayout>

    <Button
        android:id="@+id/get_timetable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:enabled="false"
        android:text="@string/action_get_timetable" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />

</LinearLayout>